27_matrix_input/grade.txt
Grading at Tue Aug 21 05:49:21 UTC 2018
Attempting to compile rotateMatrix.c
rotateMatrix.c: In function ‘main’:
rotateMatrix.c:27:32: error: passing argument 2 of ‘strchr’ makes integer from pointer without a cast [-Werror=int-conversion]
     if (strchr(matrix[height], "\n") == NULL) {
                                ^
In file included from rotateMatrix.c:3:0:
/usr/include/string.h:231:14: note: expected ‘int’ but argument is of type ‘char *’
 extern char *strchr (const char *__s, int __c)
              ^
rotateMatrix.c:32:32: error: passing argument 2 of ‘strchr’ makes integer from pointer without a cast [-Werror=int-conversion]
     if (strchr(matrix[height], "\0") != NULL) {
                                ^
In file included from rotateMatrix.c:3:0:
/usr/include/string.h:231:14: note: expected ‘int’ but argument is of type ‘char *’
 extern char *strchr (const char *__s, int __c)
              ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
